<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
    android:layout_alignParentTop="true"
    android:id="@+id/step_details_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepDetailsActivity">
</FrameLayout>
<LinearLayout
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_alignParentBottom="true">

<Button
    android:id="@+id/bt_prev"
    android:layout_width="0dp"
    android:text="@string/prev"
    style="@style/MainButtons"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_margin="1dp"/>

<Button
    android:id="@+id/bt_next"
    android:layout_width="0dp"
    android:text="@string/next"
    style="@style/MainButtons"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_margin="1dp"/>
</LinearLayout>
    </RelativeLayout>