<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.StepDetailsFragment"
    android:orientation="vertical">
<com.google.android.exoplayer2.ui.SimpleExoPlayerView
    android:id="@+id/playerView"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    >
</com.google.android.exoplayer2.ui.SimpleExoPlayerView>
    <ImageView
        android:id="@+id/image_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:textColor="@color/secondary_text"
            android:lineSpacingExtra="8dp"
            android:padding="10dp"
            android:textSize="16sp" />
    </ScrollView>

</LinearLayout>

